# ray-tracing-from-scratch

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: main.cc  main.cpp
src/math/: vec.h
